--- a/ProveedoresFIME/ProveedoresFIME/Properties/AndroidManifest.xml
+++ b/ProveedoresFIME/ProveedoresFIME/Properties/AndroidManifest.xml
@@ -3,6 +3,7 @@
           android:versionCode="1"
           android:versionName="1.0"
           package="ProveedoresFIME.ProveedoresFIME">
+  <uses-permission android:name="android.permission.INTERNET" />
   <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="27" />
   <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
   </application>
