Add: Se termina aplicación
1.-Se implementa envio de correo
2.-Se agrega detalle del material solicitado
3.- Se termina aplicación

--- a/ProveedoresFIME/ProveedoresFIME/ProveedoresFIME.csproj
+++ b/ProveedoresFIME/ProveedoresFIME/ProveedoresFIME.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Adapters\ProveedorViewHolder.cs" />
     <Compile Include="Data\IArticulosService.cs" />
     <Compile Include="Data\ICotizacionService.cs" />
+    <Compile Include="Data\INotificationService.cs" />
     <Compile Include="Data\IProveedorService.cs" />
     <Compile Include="Data\ISolicitudCotizacionService.cs" />
     <Compile Include="Data\NetworkService.cs" />
